--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bulma": "^0.9.3",
+    "bulma-start": "0.0.4",
     "express": "^4.17.2"
   },
   "devDependencies": {
