--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +14,10 @@
     "bulma": "^0.9.3",
     "bulma-extensions": "^6.2.7",
     "bulma-start": "0.0.4",
+    "cors": "^2.8.5",
     "express": "^4.17.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.16"
   }
 }
