--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "install": "cd client && npm install"
   },
   "author": "",
   "license": "ISC",
