--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
     "dev": "nodemon",
-    "install": "cd client && npm install"
+    "install": "cd client && npm install && nom run build"
   },
   "author": "",
   "license": "ISC",
