--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "challenge-london-mini-guide",
   "version": "1.0.0",
   "description": "challenge-london-mini-guide root package.json",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
+    "bulma": "^0.9.3",
+    "bulma-extensions": "^6.2.7",
+    "bulma-start": "0.0.4",
     "cors": "^2.8.5",
     "express": "^4.18.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node server.js",
+    "dev": "nodemon",
+    "install": "cd client && npm install && nom run build"
   },
   "repository": {
     "type": "git",
