--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
-    "dev": "nodemon",
-    "install": "cd client && npm install && nom run build"
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
