--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
     "dev": "nodemon",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
