--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node server.js",
+    "start": "node server.js",
     "dev": "nodemon",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
