--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "build": "npm run build",
     "dev": "nodemon",
     "heroku-postbuild": "npm run build"
   },
