--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "npm run build",
     "dev": "nodemon",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "repository": {
     "type": "git",
