--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "webpack": "^5.73.0"
   },
   "peerDependencies": {
     "react": "^17.0.2",
