--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon",
-    "postinstall": "cd client && npm run build"
+    "postinstall": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
